# stock_for_cpp

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  Dockerfile  README.md  cleanDocker.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.example  main.cpp  package.json  restart.sh  stock_db.db-shm  stock_db.db-wal  update.sh
.github/workflows/: build.yml  cmake-single-platform.yml  docker-publish.yml
.opencode/agents/: SKILLS.md  TEAM.md  agile-team.md  backend-dev.md  buy-signal-analyst.md  devops.md  frontend-dev.md  install-skills.sh  product-owner.md  qa-engineer.md  scrum-master.md  senior-frontend-dev.md  tech-lead.md  ux-designer.md
analysis/: IIndicator.h  IndicatorBase.cpp  IndicatorFactory.h  SUMMARY.md
analysis/indicators/: ATR.cpp  (+6 more)
backend/: Dockerfile  README.md  package.json  tsconfig.json
config/: Config.cpp  Config.h  EXAMPLES.md  README.md  SUMMARY.md
core/: AnalysisResult.cpp  AnalysisResult.h  COMPLETION_REPORT.md  Core.h  Portfolio.cpp  Portfolio.h  Position.cpp  Position.h  Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  StrategyManager.cpp  StrategyManager.h  Trade.cpp  Trade.h
cpp/: .cursorrules  .env  .gitignore  CMakeLists.txt  Dockerfile  QUICK_REFERENCE.md  README.md  env.example  main.cpp  version.h.in
cpp/analysis/: Analysis.h  IndicatorBase.h  IndicatorFactory.cpp  README.md
cpp/analysis/indicators/: BOLL.cpp  EMA.cpp  KDJ.cpp  KDJ.h  MA.cpp  RSI.cpp  RSI.h
cpp/api/: Api.h  ApiRouter.cpp  ApiRouter.h  HttpServer.cpp  HttpServer.h
cpp/config/: Config.cpp  Config.h
cpp/core/: AccuracyAnalyzer.cpp  AccuracyAnalyzer.h  AnalysisResult.cpp  AnalysisResult.h  Core.h  FundamentalData.h  FundamentalFilter.cpp  FundamentalFilter.h  MIGRATION.md  ParameterOptimizer.cpp  ParameterOptimizer.h  PredictionHistory.cpp  PredictionHistory.h  README.md  SUMMARY.md  Stock.h  Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  StrategyManager.cpp  StrategyManager.h  example.cpp
cpp/core/strategies/: BOLLStrategy.cpp  BOLLStrategy.h  EMA17BreakoutStrategy.cpp  EMA17TO25Strategy.cpp  EMA17TO25Strategy.h  EMA25CrossoverStrategy.cpp  EMA25CrossoverStrategy.h  EMA25Greater17PriceMatchStrategy.h  GridStrategy.cpp  MACDStrategy.cpp  MACDStrategy.h  MACrossStrategy.h  SurgeSignalStrategy.cpp  SurgeSignalStrategy.h
cpp/data/: Data.h  TYPE_UNIFICATION.md
cpp/data/cache/: MemoryCache.h
cpp/data/database/: AdapterFactory.cpp  AdapterFactory.h  AnalysisProcessRecord.cpp  AnalysisProcessRecord.h  AnalysisProcessRecordDAO.cpp  AnalysisProcessRecordDAO.h  AnalysisProcessRecordTable.h  AnalysisProgressTable.h  AnalysisResultDAO.cpp  AnalysisResultTable.h  ChartDataDAO.cpp  ChartDataDAO.h  ChartDataTable.h  Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionPool.cpp  ConnectionPool.h  DatabaseTypes.h  IConnection.h  IDatabaseAdapter.h  MoneyFlowDAO.cpp  MoneyFlowDAO.h  MoneyFlowTable.h  MySQLAdapter.cpp  MySQLAdapter.h  MySQLConnection.cpp  MySQLConnection.h  PriceDAO.cpp  PriceDAO.h  SQLiteAdapter.cpp  SQLiteAdapter.h  SchemaDefinitions.h  StockDAO.cpp  StockTable.h  WriteQueue.cpp  WriteQueue.h
cpp/data/file/: CSVReader.cpp  CSVReader.h  CSVWriter.cpp
cpp/database/migrations/: 001_create_analysis_process_records.sql  002_refactor_analysis_process_records.sql  003_refactor_process_records_per_stock.sql  README.md
cpp/docs/: API_USAGE.md  EMA17_Breakout_Strategy_Summary.md  EMA_Convergence_Strategy.md  EMA_Convergence_Strategy_Correction.md  STOCK_SELECTOR_DESIGN.md  SURGE_PREDICTION_DESIGN.md  StrategyManager_Usage.md
cpp/docs/plans/: 2026-03-07-multithreading-analysis-design.md  2026-03-07-scheduler-design.md  2026-03-07-scheduler-implementation-plan.md
cpp/eventbus/: EventBus.h  EventBusManager.cpp  EventBusManager.h  EventValidator.cpp  EventValidator.h
cpp/eventbus/events/: SystemEvents.h
cpp/examples/: analysis_result_dao_example.cpp  ema17to25_strategy_test.cpp  eventbus_example.cpp
cpp/log/: CHECKLIST.md  DELIVERY.md  ILogger.h  LogConfig.cpp  LogLevel.h  Logger.h  LoggerFactory.cpp  SUMMARY.md  SpdlogLogger.h
cpp/network/: DataSourceFactory.cpp  IDataSource.h  README.md  SUMMARY.md  TushareDataSource.cpp  TushareDataSource.h
cpp/network/examples/: README.md
cpp/network/http/: HttpClient.cpp  TushareClient.cpp  TushareClient.h
cpp/scheduler/: Scheduler.cpp  Scheduler.h
cpp/scripts/: update_log_docs.sh
cpp/utils/: Encryptor.cpp  KLineAggregator.cpp  KLineAggregator.h  MathUtil.cpp  RateLimiter.cpp  RateLimiter.h  SUMMARY.md  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  Utils.h
data/: Data.cpp  Data.h
docker-images/: hot-update-auth.sh  hot-update.sh  load-images.sh
docs/: AnalysisResult_Database_Integration.md  DESIGN_CHANGELOG.md  EMA17_Breakout_Strategy.md  EMA_Convergence_Strategy_Summary.md  TUSHARE_UPDATE.md  api-reference.md  architecture.md  docker-deployment.md  eventbus-quick-start.md  miniprogram-deployment.md  strategy-analysis-ema25crossover.md  strategy-analysis-ema25greater17.md
env/: .env.example
examples/: ema17_breakout_example.cpp  ema_convergence_example.cpp  strategy_manager_example.cpp
log/: ARCHITECTURE.md  LogConfig.h  LogLevel.h  Logger.h  LoggerFactory.h  LoggerManager.cpp  LoggerManager.h  MIGRATION.md  QUICKSTART.md  README.md  REFACTOR_COMPLETE.md  SUMMARY.md  SpdlogLogger.cpp  UPDATE_SUMMARY.md  USAGE.md
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json
network/: DataSourceFactory.h  IDataSource.h  Network.h  TushareDataSource.cpp  TushareDataSource.h
nodejs/: .env  .gitignore  Dockerfile  README.md  encrypt.js  package.json
openspec/: AGENTS.md  config.yaml  project.md
scheduler/: Scheduler.h  TradeCalendar.cpp  TradeCalendar.h
skills/: .skills_store_lock.json
utils/: Encryptor.h  MathUtil.h  README.md  StringUtil.cpp  ThreadPool.cpp  ThreadPool.h  TimeUtil.h  test_extract_simple.cpp
web-frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
(+357 files in other folders)
